fix attached file checkbox vertical align

--- a/docdoku-server/docdoku-server-web/src/main/webapp/less/document-management/files.less
+++ b/docdoku-server/docdoku-server-web/src/main/webapp/less/document-management/files.less
@@ -72,6 +72,10 @@ div.attachedFiles {
 
     list-style: none;
 
+    input[type="checkbox"].file-check{
+      margin: 0 0 3px 0;
+    }
+
     div.item-component {
       display: inline-block;
     }
